# FX-Manager

./: .gitignore  .readthedocs.yaml  Makefile  README.md  make.bat  requirements.txt  setup.cfg  setup.py
datasets/: data_description.txt
docs/: about_author.rst  conf.py  features.rst  fxmanager.basic.rst  fxmanager.dwx.rst  fxmanager.optimization.rst  fxmanager.rst  fxmanager.simulation.rst  fxmanager.strategies.rst  index.rst  installation.rst  license.rst  modules.rst  tutorials.rst
pydoc_docs/: fxmanager._metadata.html  fxmanager.basic.account.html  fxmanager.basic.html  fxmanager.basic.util.html  fxmanager.dwx.DWX_ZMQ_Execution.html  fxmanager.dwx.DWX_ZMQ_Reporting.html  fxmanager.dwx.DWX_ZMQ_Strategy.html  fxmanager.dwx.DWX_ZeroMQ_Connector_v2_0_1_RC8.html  fxmanager.dwx.html  fxmanager.dwx.prices_subscriptions.html  fxmanager.dwx.rates_historic.html  fxmanager.html  fxmanager.optimization.eq_weight_optimizer.html  fxmanager.optimization.eqw_optimization_test.html  fxmanager.optimization.html  fxmanager.optimization.w_optimization_test.html  fxmanager.optimization.weight_optimizer.html  fxmanager.simulation.historic.html  fxmanager.simulation.html  fxmanager.simulation.live.html  fxmanager.strategies.html  fxmanager.strategies.naieve_momentum.html  fxmanager.strategies.template.html
scripts/: analyze.py  create_fx_proj.py  edhec_risk_kit.py  fx_data_collector.py  fx_pp.py  pp.py  run_fx_hist_sim.py  run_fx_histl_sim.py  run_fx_live_sim.py  run_fx_opt_test.py  util.py  view_res.py
sphinx_docs/: conf.py  fxmanager.dwx.rst  fxmanager.rst  modules.rst
(+697 files in other folders)
